# homeassistant-gtfs-realtime

./: .gitignore  .pre-commit-config.yaml  README.md  feed_compatibility.md  pyproject.toml
.github/: CONTRIBUTING.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feed-request-template.md
.github/workflows/: feed_compatibility.yaml  hacs.yaml  hassfest.yaml  release_assets.yaml  test.yaml  test_upgrade.yaml
custom_components/gtfs_realtime/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  feeds.json  helpers.py  icons.json  manifest.json  sensor.py  services.yaml
custom_components/gtfs_realtime/translations/: README.md  de.json  en.json  es.json  fr.json  it.json  nl.json
example/: README.md  icon_arrival_card.yml  tile_arrival_card.yml
hooks/: check_feed_compatibility.py
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_number.py  test_sensor.py  util.py
tests/snapshots/: test_button.ambr  test_diagnostics.ambr  test_init.ambr  test_sensor.ambr
